added wildcard paths and defined endpoints